# mx-attestation-sc

./: .gitignore  Cargo.toml  README.md  abi.sh  build-wasm.sh  zip-asset-wasm.sh
.github/workflows/: actions.yml  release-upload.yml  release.yml
abi/: Cargo.toml
abi/src/: main.rs
c-version/: build.sh  c-version.c  c-version.export  helpers.c  helpers.cpp  helpers.h  serde.c  serde.h  storage.c  storage.h  user.h
c-version/elrond/: context.h  types.h  util.h
c-version/output/: c-version.wasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_user.rs  fuzz_value_state.rs
mandos/: attest_ok.steps.json  attestation_init_steps.json  main.scen.json  register_ok.steps.json  save_public_info_ok.steps.json  version.scen.json
meta/: Cargo.toml
meta/src/: main.rs
output/: attestation.abi.json  attestation.hex  attestation.wasm
scenarios/: attestation_init_steps.json  main.scen.json  register_ok.steps.json
src/: .gitignore  lib.rs  user.rs  user_state.rs  value_state.rs
tests/: mandos_go_test.rs  mandos_rs_test.rs  mandos_test.rs  mx_attestation_sc_scenario_go_test.rs  mx_attestation_sc_scenario_rs_test.rs  tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
