[package]
name = "attestation"
version = "1.0.1"
authors = ["sasurobert <robert.sasu@elrond.com>", "andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.15.0"

[dependencies.elrond-wasm-derive]
version = "0.15.0"

[dependencies.elrond-wasm-node]
version = "0.15.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.15.0"
