[package]
name = "attestation"
version = "0.0.0"
authors = ["sasurobert <robert.sasu@elrond.com>", "andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.0"
