[package]
name = "attestation"
version = "0.0.0"
authors = [
    "Robert Sasu <robert.sasu@multiversx.com>",
    "Andrei Marinica <andrei.marinica@multiversx.com>",
]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.45.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.0"
