[package]
name = "attestation-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.attestation]
path = ".."

[workspace]
members = ["."]

[dependencies.elrond-wasm-node]
version = "0.38.0"

[dependencies.elrond-wasm-output]
version = "0.38.0"
features = ["wasm-output-mode"]
