[package]
name = "attestation-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.attestation]
path = ".."

[workspace]
members = ["."]

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.0"
