[package]
name = "attestation-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.attestation]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.45.0"

[workspace]
members = ["."]
